--- a/src/app/pages/pages-login/pages-login.component.html
+++ b/src/app/pages/pages-login/pages-login.component.html
@@ -33,7 +33,7 @@
                          </form>
                       </div>
                    </div>
-                   <div class="credits"> Loved by <a href="https://freeetemplates.com/">FreeeTemplates</a></div>
+                   <div class="credits"> Loved by <a >Aditya's</a></div>
                 </div>
              </div>
           </div>
